<resources>
    <string name="app_name">ffs</string>

    <string name="action_settings">Settings</string>

    <string-array name="DrawerMenuTitles">
        <item>Productos</item>
        <item>Mapa</item>
        <item>Notificaciones</item>
        <item>Perfil</item>
    </string-array>

    <string-array name="DrawerMenuIconsOff">
        <item>drawer_products_item_icon_off</item>
        <item>drawer_map_item_icon_off</item>
        <item>drawer_notifications_item_icon_off</item>
        <item>drawer_profile_item_icon_off</item>
    </string-array>

    <string-array name="DrawerMenuIconsOn">
        <item>drawer_products_item_icon_on</item>
        <item>drawer_map_item_icon_on</item>
        <item>drawer_notifications_item_icon_on</item>
        <item>drawer_profile_item_icon_on</item>
    </string-array>

    <string-array name="CategoryList">
        <item>Mac</item>
        <item>iPad</item>
        <item>iPhone</item>
        <item>Watch</item>
        <item>TV</item>
        <item>Music</item>
    </string-array>

    <string-array name="DistanceList">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string name="products_fragment">Productos fragment</string>
    <string name="map_fragment">Mapa fragment</string>
    <string name="notifications_fragment">Notificaciones fragment</string>
    <string name="profile_fragment">Perfil fragment</string>
    <string name="openDrawer">Drawer opened</string>
    <string name="closeDrawer">Drawer closed</string>
    <string name="navigation_drawer_item_icon_content_description">Drawer Menu Icon</string>
    <string name="drawer_item_example_text">Navigation drawer item</string>
    <string name="drawer_number_of_transactions_format">%1$d ventas</string>

    <string name="products_loading_message">Descargando productos,\npor favor espere.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_email_hint">Usuario</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_signin_hint">Entrar</string>
    <string name="login_register_hint">Registrarse</string>
    <string name="login_forgot_password_hint">Olvidé mi contraseña</string>
    <string name="login_error_message_title">Error en el acceso</string>
    <string name="login_error_message">Ha ocurrido un error al acceder. Por favor, revisa los datos introducidos.</string>
    <string name="title_activity_edit_product">EditProduct</string>
    <string name="transaction_creation_message">Realizando la transacción,\npor favor espere.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="product_detail_fragment">Product detail fragment</string>
    <string name="product_detail_location_label">LOCALIZACIÓN</string>
    <string name="published">publicado</string>
    <string name="selling">En venta</string>
    <string name="sold">Vendido</string>
    <string name="photos">fotos</string>
    <string name="filter_submit">Aceptar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_fragment_text">To be done by Mixi     ;-)</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="purchase">Comprar</string>
    <string name="login_accessing">Accediendo</string>
    <string name="new_product_hint_title">Title</string>
    <string name="new_product_hint_description">Description</string>
    <string name="new_product_hint_category">Category</string>
    <string name="new_product_hint_price">Price</string>
    <string name="transaction_succeed">Transacción completada</string>
    <string name="enjoy_new_product">Disfruta tu nuevo producto</string>
    <string name="button_ok">OK</string>
    <string name="please_try_again">Por favor, inténtalo de nuevo.</string>
    <string name="transaction_failed">Ups, la transacción no pudo completarse</string>
    <string name="find_product">Buscar producto</string>
    <string name="filter_product_name">Filtrar productos</string>
    <string name="no_products_label_text">No se han encontrado productos</string>
    <string name="product_image_dialog_title">Product Photo</string>
    <string name="product_image_dialog_message">What do you want to do with this picture?</string>
    <string name="product_image_dialog_remove">Remove</string>
    <string name="product_image_dialog_replace">Replace</string>
    <string name="new_product_uploading_images">Uploading Product Images</string>
    <string name="new_product_uploading_product_info">Uploading product info</string>
    <string name="product_image_content_description">Product image</string>
    <string name="product_name_mock_text">Product name</string>
    <string name="product_price_mock_text">00.00</string>
    <string name="search_product_hint_text">Buscar productos</string>
    <string name="profile_tab_title">Perfil</string>
    <string name="selling_tab_title">En venta</string>
    <string name="sold_tab_title">Vendidos</string>
    <string name="bought_tab_title">Comprados</string>
    <string name="profile_fragment_user_name">%1$s %2$s</string>
    <string name="profile_fragment_user_location">%1$s (%2$s)</string>
    <string name="profile_fragment_products_selling">%1$d sales</string>
    <string name="profile_fragment_products_sold">%1$d purchases</string>
    <string name="profile_fragment_products_bought">%1$d bought</string>

</resources>
